--- a/GraphGUI/MainWindow.xaml
+++ b/GraphGUI/MainWindow.xaml
@@ -11,12 +11,12 @@
             <Button Name="AddVertexButton" Content="Přidat vrchol" Width="110" Margin="0,0,0,10" Click="AddVertexButton_Click"/>
             <Button Name="AddEdgeButton" Content="Přidat hranu" Width="110" Margin="0,0,0,10" Click="AddEdgeButton_Click"/>
             <Separator Width="110" Margin="0,0,0,10"/>
-            <TextBlock Text="Vyberte hranu" Margin="0,0,0,5"/>
+            <TextBlock Text="Vyberte hranu" Margin="0,0,0,5" HorizontalAlignment="Center"/>
             <ComboBox Name="EdgeComboBox" Width="110" Margin="0,0,0,10"/>
             <Button Name="BlockEdgeButton" Content="Změnit dostupnost" Width="110" Margin="0,0,0,10" Click="BlockEdgeButton_Click"/>
             <Button Name="RemoveEdgeButton" Content="Odebrat hranu" Width="110" Margin="0,0,0,10" Click="RemoveEdgeButton_Click"/>
             <Separator Width="110" Margin="0,0,0,10"/>
-            <TextBlock Text="Vrchol" Margin="0,0,0,5"/>
+            <TextBlock Text="Vrchol" Margin="0,0,0,5" HorizontalAlignment="Center"/>
             <ComboBox Name="StartVertexComboBox" Width="110" Margin="0,0,0,10"/>
             <Button Name="SearchVertexButton" Content="Vyhledat" Width="110" Margin="0,0,0,10" Click="SearchVertexButton_Click"/>
             <Button Name="DijkstraToButton" Content="Nejkratší cesta" Width="110" Margin="0,0,0,10" Click="DijkstraToButton_Click"/>
@@ -24,8 +24,6 @@
             <Button x:Name="PrintGraphButton" Content="Vypsat graf" Width="110" Margin="0,0,0,10" Click="PrintGraphButton_Click"/>
             <Button x:Name="ClearGraphButton" Content="Zrušit graf" Width="110" Margin="0,10,0,10" Click="ClearGraphButton_Click"/>
         </StackPanel>
-        <TextBox Name="MessageTextBox" Grid.Column="1" Margin="10" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" FontFamily="Consolas" IsReadOnly="True"/>
+        <TextBox Name="MessageTextBox" Grid.Column="1" Margin="10,10,10,10" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" FontFamily="Consolas" IsReadOnly="True"/>
     </Grid>
 </Window>
-
-
