--- a/GraphGUI/MainWindow.xaml
+++ b/GraphGUI/MainWindow.xaml
@@ -1,67 +1,98 @@
 ﻿<Window x:Class="GraphGUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Graph GUI" Height="500" Width="1000">
+        Title="Grid Index GUI (Města)" Height="550" Width="1000">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto" MinWidth="200"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto" MinWidth="220"/>
+            <ColumnDefinition Width="Auto" MinWidth="240"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Width="120">
-            <Button Name="AddVertexButton" Content="Přidat vrchol" Width="110" Margin="0,0,0,10" Click="AddVertexButton_Click"/>
-            <Button Name="AddEdgeButton" Content="Přidat hranu" Width="110" Margin="0,0,0,10" Click="AddEdgeButton_Click"/>
-            <Separator Width="110" Margin="0,0,20,10"/>
-            <TextBlock Text="Vyberte hranu" Margin="0,0,0,5" HorizontalAlignment="Center"/>
-            <ComboBox Name="EdgeComboBox" Width="110" Margin="0,0,0,10"/>
-            <Button Name="BlockEdgeButton" Content="Změnit dostupnost" Width="110" Margin="0,0,0,10" Click="BlockEdgeButton_Click"/>
-            <Button Name="RemoveEdgeButton" Content="Odebrat hranu" Width="110" Margin="0,0,0,10" Click="RemoveEdgeButton_Click"/>
-            <Separator Width="110" Margin="0,0,20,10"/>
-            <TextBlock Text="Vrchol" Margin="0,0,0,5" HorizontalAlignment="Center"/>
-            <ComboBox Name="StartVertexComboBox" Width="110" Margin="0,0,0,10"/>
-            <Button Name="SearchVertexButton" Content="Vyhledat" Width="110" Margin="0,0,0,10" Click="SearchVertexButton_Click"/>
-            <Button Name="DijkstraToButton" Content="Nejkratší cesta" Width="110" Margin="0,0,0,10" Click="DijkstraToButton_Click"/>
-            <Separator Width="110" Margin="0,0,0,10"/>
-            <Button x:Name="PrintGraphButton" Content="Vypsat graf" Width="110" Margin="0,0,0,10" Click="PrintGraphButton_Click"/>
-            <Button x:Name="ClearGraphButton" Content="Zrušit graf" Width="110" Margin="0,10,0,10" Click="ClearGraphButton_Click"/>
+
+        <StackPanel Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Left"
+                    VerticalAlignment="Top" Margin="10">
+
+            <TextBlock Text="Datasety Grid Indexu" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+
+            <TextBlock Text="Vybrat existující dataset:" Margin="0,0,0,2"/>
+            <ComboBox x:Name="GridIndexSelectorComboBox" Margin="0,0,0,10" MinWidth="180"
+                      SelectionChanged="GridIndexSelectorComboBox_SelectionChanged"/>
+
+            <TextBlock Text="Vytvořit Nový Dataset" FontWeight="Bold" Margin="0,10,0,5"/>
+            <TextBlock Text="Název datasetu (adresáře):" Margin="0,0,0,2"/>
+            <TextBox x:Name="NewDatasetNameTextBox" Margin="0,0,0,5" MinWidth="180"/>
+            <Button x:Name="CreateDatasetButton" Content="Vytvořit prázdný dataset"
+                    Click="CreateDatasetButton_Click" Margin="0,0,0,15"/>
+
+            <Separator Margin="0,5,0,15"/>
+
+            <TextBlock Text="Informace o Gridu" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+            <Button x:Name="PrintLinesButton" Content="Vypsat dělící čáry" Click="PrintLinesButton_Click" Margin="0,0,0,10" />
+            <Button x:Name="PrintGridButton" Content="Vypsat info o gridu" Click="PrintGridButton_Click" Margin="0,0,0,10" />
+
         </StackPanel>
-        <TextBox Name="MessageTextBox" Grid.Column="1" Margin="10,10,10,10" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" FontFamily="Consolas" IsReadOnly="True"/>
-        <StackPanel Grid.Column="2" Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Width="220">
-            <TextBlock Text="Grid" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+
+        <TextBox Name="MessageTextBox" Grid.Column="1" Margin="10" TextWrapping="Wrap"
+                 VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+                 FontFamily="Consolas" IsReadOnly="True"/>
+
+        <StackPanel Grid.Column="2" Orientation="Vertical" HorizontalAlignment="Left"
+                    VerticalAlignment="Top" Margin="10" Width="220">
+
+            <TextBlock Text="Operace s Body" FontWeight="Bold" FontSize="14" Margin="0,0,0,10"/>
+
+            <TextBlock Text="Přidat Město" FontWeight="Bold" Margin="0,0,0,5"/>
+            <TextBlock Text="Název:" Margin="0,0,0,2"/>
+            <TextBox x:Name="CityNameTextBox" Margin="0,0,0,5" />
+            <TextBlock Text="Počet obyv.:" Margin="0,0,0,2"/>
+            <TextBox x:Name="PopulationTextBox" Margin="0,0,0,5" />
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
-                <TextBlock Text="X" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="PointXTextBox" Width="40" Margin="0,0,10,0" />
-                <TextBlock Text="Y" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="PointYTextBox" Width="40" Margin="0,0,10,0" />
-                <ComboBox x:Name="PointValueComboBox" Width="77" Margin="0,0,10,0" />
+                <TextBlock Text="X:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="PointXTextBox" Width="70" Margin="0,0,10,0" />
+                <TextBlock Text="Y:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="PointYTextBox" Width="70" Margin="0,0,0,0" />
             </StackPanel>
-            <Button Content="Přidat bod do gridu" Click="AddPointToGridButton_Click" Margin="0,0,20,10" />
-            <Separator Width="220" Margin="0,0,20,10"/>
+            <Button x:Name="AddCityButton" Content="Přidat Město do Gridu" Click="AddCityButton_Click" Margin="0,0,0,10" />
+
+            <Separator Margin="0,5,0,10"/>
+
+            <TextBlock Text="Smazat Bod dle Souřadnic" FontWeight="Bold" Margin="0,0,0,5"/>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
-                <TextBlock Text="X" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="SearchXTextBox" Width="40" Margin="0,0,10,0" />
-                <TextBlock Text="Y" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="SearchYTextBox" Width="40" Margin="0,0,10,0" />
+                <TextBlock Text="X:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="DeleteXTextBox" Width="70" Margin="0,0,10,0" />
+                <TextBlock Text="Y:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="DeleteYTextBox" Width="70" Margin="0,0,0,0" />
             </StackPanel>
-            <Button Content="Vyhledat bod" Click="FindPointButton_Click" Margin="0,0,20,10" />            
-            <Separator Width="220" Margin="0,0,20,10"/>
+            <Button x:Name="DeletePointButton" Content="Smazat bod" Click="DeletePointButton_Click" Margin="0,0,0,10" />
+
+            <Separator Margin="0,5,0,10"/>
+
+            <TextBlock Text="Vyhledat Bod dle Souřadnic" FontWeight="Bold" Margin="0,0,0,5"/>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
-                <TextBlock Text="X1" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="IntervalX1TextBox" Width="40" Margin="0,0,10,0" />
-                <TextBlock Text="Y1" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="IntervalY1TextBox" Width="40" Margin="0,0,10,0" />
+                <TextBlock Text="X:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="SearchXTextBox" Width="70" Margin="0,0,10,0" />
+                <TextBlock Text="Y:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="SearchYTextBox" Width="70" Margin="0,0,0,0" />
+            </StackPanel>
+            <Button x:Name="FindPointButton" Content="Vyhledat bod" Click="FindPointButton_Click" Margin="0,0,0,10" />
+
+            <Separator Margin="0,5,0,10"/>
+
+            <TextBlock Text="Vyhledat Interval" FontWeight="Bold" Margin="0,0,0,5"/>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <TextBlock Text="X1:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="IntervalX1TextBox" Width="70" Margin="0,0,10,0" />
+                <TextBlock Text="Y1:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="IntervalY1TextBox" Width="70" Margin="0,0,0,0" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
-                <TextBlock Text="X2" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="IntervalX2TextBox" Width="40" Margin="0,0,10,0" />
-                <TextBlock Text="Y2" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="IntervalY2TextBox" Width="40" Margin="0,0,10,0" />
+                <TextBlock Text="X2:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="IntervalX2TextBox" Width="70" Margin="0,0,10,0" />
+                <TextBlock Text="Y2:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <TextBox x:Name="IntervalY2TextBox" Width="70" Margin="0,0,0,0" />
             </StackPanel>
-            <Button Content="Vyhledat interval" Click="FindIntervalButton_Click" Margin="0,0,20,10" />
-            <Separator Width="220" Margin="0,0,20,10"/>
-            
-            <Button Content="Vypsat čáry" Click="PrintLinesButton_Click" Margin="0,0,20,10" />
-            <Button Content="Vypsat grid" Click="PrintGridButton_Click" Margin="0,0,20,10" />
+            <Button x:Name="FindIntervalButton" Content="Vyhledat interval" Click="FindIntervalButton_Click" Margin="0,0,0,10" />
+
         </StackPanel>
     </Grid>
 </Window>
